--- a/Bootstrap 5 crash course/styles.css
+++ b/Bootstrap 5 crash course/styles.css
@@ -2,6 +2,12 @@ html {
   background-color: grey;
 }
 
+body::before {
+  display: block;
+  content: '';
+  height: 60px;
+}
+
 @media(min-width: 768px) {
   .news-input {
     width: 50%;
